change cards design

--- a/src/assets/angular-material-examples/bottom-sheet-overview/bottom-sheet-overview-example-write.html
+++ b/src/assets/angular-material-examples/bottom-sheet-overview/bottom-sheet-overview-example-write.html
@@ -1,1 +1,1 @@
-<button (click)="openBottomSheetWriteUs()" class="open"><span class="fa fa-user-o" aria-hidden="true"></span><br>Upgrade</button>
+<button (click)="openBottomSheetWriteUs()" class="open"><span class="fa fa-user-o" aria-hidden="true"></span><br>Write Us</button>
