fixed design issues

--- a/src/assets/angular-material-examples/bottom-sheet-overview/bottom-sheet-overview-example-sheet-write-us.html
+++ b/src/assets/angular-material-examples/bottom-sheet-overview/bottom-sheet-overview-example-sheet-write-us.html
@@ -16,7 +16,7 @@
   </div>
 <!-- / HEADER -->
   </mat-nav-list>
-    <p>
+ <!--    <p>
       <mat-form-field appearance="legacy">
         <mat-label>Legacy form field</mat-label>
         <input matInput placeholder="Placeholder">
@@ -47,8 +47,66 @@
         <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
         <mat-hint>Hint</mat-hint>
       </mat-form-field>
-    </p>
-    
+    </p> -->
+    <div fxLayout="row">
+      <div fxFlex="100" fxFlex.gt-xs="33" fxFlex.gt-sm="100" fxFlex.gt-lg="50">
+        <p>
+          <mat-form-field  appearance="outline">
+            <mat-label>First Name</mat-label>
+            <input matInput placeholder="Placeholder">
+            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+            <!-- <mat-hint>First Name</mat-hint> -->
+          </mat-form-field>
+        </p>
+      </div>  
+      <div fxFlex="100" fxFlex.gt-xs="33" fxFlex.gt-sm="100" fxFlex.gt-lg="50">
+        <p>
+          <mat-form-field  appearance="outline">
+            <mat-label>Last Name</mat-label>
+            <input matInput placeholder="Placeholder">
+            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+            <!-- <mat-hint>Last Name</mat-hint> -->
+          </mat-form-field>
+        </p>
+      </div>
+    </div> 
+    <p>
+      <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-xs="100" fxFlex.gt-sm="100">
+        <mat-label>Organization</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Organization</mat-hint>
+      </mat-form-field>
+    </p> 
+    <p>
+      <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-xs="100" fxFlex.gt-sm="100">
+        <mat-label>Location</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Location</mat-hint>
+      </mat-form-field>
+    </p> 
+    <p>
+      <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-xs="100" fxFlex.gt-sm="100">
+        <mat-label>Contact Number</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Contact Number</mat-hint>
+      </mat-form-field>
+    </p> 
+    <p>
+      <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-xs="100" fxFlex.gt-sm="100">
+        <mat-label>Email Address</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Email Address</mat-hint>
+      </mat-form-field>
+    </p> 
+    <div class="mat-button mat-button-custom">
+      <button mat-stroked-button color="primary" fxFlex="100" fxFlex.gt-xs="100" fxFlex.gt-sm="100">Submit</button>
+    </div> 
+  
+   
  
 
   
